syntax = "proto3";
package org.lkathary.grpc;

message HelloRequest {
  string company = 1;
  repeated string employee = 2;
}

message HelloResponse {
  string greeting = 1;
  int32 number = 2;
}

service GreetingProcessor {
  rpc greeting(HelloRequest) returns (HelloResponse);
}